--- a/videokyc-angular/src/app/components/navbar/navbar.component.html
+++ b/videokyc-angular/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav>
-    <div>
-        <img src="" alt="Jio logo">
+    <div class="flexbox">
+        <div class="logo">Jio</div>
+        <div class="nav-item">Home</div>
     </div>
-    <div>Home</div>
 </nav>
