--- a/videokyc-angular/src/app/components/navbar/navbar.component.css
+++ b/videokyc-angular/src/app/components/navbar/navbar.component.css
@@ -26,31 +26,36 @@
     font-size: 18px;
     color: white;
     cursor: pointer;
+    position: relative;
+    text-decoration: none;
 }
 
-/*.nav-item:hover{
-    color: aquamarine;
-    text-decoration: underline;
-    transition: 0.9s ease-in;
-}*/
-.nav-item:after {
+.nav-item::before {
+    content: '';
     position: absolute;
+    width: 100%;
+    height: 4px;
+    border-radius: 4px;
+    background-color: #e91e63;
     bottom: 0;
     left: 0;
-    right: 0;
-    margin: auto;
-    width: 0%;
-    content: '.';
-    color: transparent;
-    background: aquamarine;
-    height: 1px;
+    transform-origin: right;
+    transform: scaleX(0);
+    transition: transform .3s ease-in-out;
 }
-.nav-item:hover:after {
-    width: 100%;
+
+.nav-item:hover::before {
+    transform-origin: left;
+    transform: scaleX(1);
+}
+
+.nav-item:hover{
+    color: #59c5f0;
+    transition: 0.25s ease-out;
 }
 
 nav{
-    background: linear-gradient(to  top right, #01041D, #8889a1);
+    background: linear-gradient(to  right, #232649, #301b35);
     width: 100%;
     height: 80px;
     margin: 0 auto;
