--- a/videokyc-angular/src/styles.css
+++ b/videokyc-angular/src/styles.css
@@ -2,9 +2,16 @@
 
 body{
     font-family: Poppins;
+    height: 100%;
+    background: linear-gradient(to right, #232649, #301b35);
+    background-position: 0% 100%;
 }
 
 *{
     margin: 0;
     padding: 0;
+}
+
+html{
+    scroll-behavior: smooth;
 }
