--- a/videokyc-angular/src/app/components/dropdowncard/dropdowncard.component.html
+++ b/videokyc-angular/src/app/components/dropdowncard/dropdowncard.component.html
@@ -3,10 +3,6 @@
 
 <div class="ddcard">
     <p class="select">Select to what degree you would like to proceed with the Video KYC process</p>
-    <select name="process" id="process" multiple>
-        <option value="location">Location</option>
-        <option value="pan">PAN details</option>
-        <option value="digilocker">DigiLocker</option>
-        <option value="face">Face Match</option>
-    </select>
+    <button class="primary-btn">Create</button>
 </div>
+<hr class="divider">
