--- a/videokyc-angular/src/app/components/flowitem/flowitem.component.html
+++ b/videokyc-angular/src/app/components/flowitem/flowitem.component.html
@@ -1,1 +1,15 @@
-<p>flowitem works!</p>
+<div class="box">
+    <h4>Video KYC Flow</h4>
+    <div class="flow">
+        <ol>
+            <li>Login</li>
+            <li>Personal Details</li>
+            <li>Location</li>
+            <li>PAN Card</li>
+            <li>DigiLocker</li>
+            <li>Face Match</li>
+            <li>KYC Report</li>
+        </ol>
+        <hr class="divider">
+    </div>
+</div>
