--- a/videokyc-angular/src/app/page/vkyc/vkyc.component.html
+++ b/videokyc-angular/src/app/page/vkyc/vkyc.component.html
@@ -2,35 +2,43 @@
 <div class="mainbox">
   
   <div class="content">
-    <div class="journey">
-      <div class="headingyourdata">
-        <h4 class="yourdatahead">Your Journey:</h4>
-      </div>
-      <div class="journeylist">
-        <ol class="jlist">
-          <li>Login</li>
-          <li>Personal Details</li>
-          <li>Location</li>
-          <li>PAN Card</li>
-          <li>DigiLocker</li>
-          <li>Face Match</li>
-          <li>KYC Report</li>
-      </div>
-    </div>
+    
     <div class="video">
     </div>
+
+      <div class="heads">
+        <div class="headingyourdata">
+            <h4 class="yourdatahead">Your Journey:</h4>
+        </div>
+
+        <div class="journeylist">
+            <ol class="jlist">
+            <li>Login</li>
+            <li>Personal Details</li>
+            <li>Location</li>
+            <li>PAN Card</li>
+            <li>DigiLocker</li>
+            <li>Face Match</li>
+            <li>KYC Report</li>
+            </ol>
+        </div>
+      </div>
   </div>
+  
+  <hr class="vertical">
   
   <div class="yourdata">
     <div class="headingyourdata">
-      <h4 class="yourdatahead">Your Journey:</h4>
+      <h4 class="yourdatahead">Your Data:</h4>
     </div>
-    <div class="dataheadings>
+    
+    <div class="dataheadings">
       <div class="titles">
         <h4 class="titlesheading">Personal Details</h4>
         <div class="expandicon"></div>
         <hr>
       </div> 
+
   </div>
 
 </div>
