--- a/videokyc-angular/src/app/components/dropdowncard/dropdowncard.component.html
+++ b/videokyc-angular/src/app/components/dropdowncard/dropdowncard.component.html
@@ -3,10 +3,10 @@
 
 <div class="ddcard">
     <p class="select">Select to what degree you would like to proceed with the Video KYC process</p>
-    <button class="primary-btn">Create</button>
+    <button class="primary-btn" (click)="openModal()">Create</button>
 </div>
 <hr class="divider">
 
 <ng-template cdkPortal>
-  
+  <app-overlayform></app-overlayform>
 </ng-template>
