--- a/videokyc-angular/src/app/components/dropdowncard/dropdowncard.component.html
+++ b/videokyc-angular/src/app/components/dropdowncard/dropdowncard.component.html
@@ -3,6 +3,6 @@
 
 <div class="ddcard">
     <p class="select">Select to what degree you would like to proceed with the Video KYC process</p>
-    <button class="primary-btn">Create</button>
+    <button class="primary-btn" routerLink="/vkyc">Create</button>
 </div>
 <hr class="divider">
