--- a/videokyc-angular/src/app/components/navbar/navbar.component.html
+++ b/videokyc-angular/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav>
     <div class="flexbox">
-        <div class="logo">Jio</div>
-        <div class="nav-item">Home</div>
+        <div class="logo" routerLink="/home">Jio</div>
+        <div class="nav-item" routerLink="/home">Home</div>
     </div>
 </nav>
