--- a/videokyc-angular/src/app/page/login/login.component.html
+++ b/videokyc-angular/src/app/page/login/login.component.html
@@ -1,1 +1,23 @@
-<p>login works!</p>
+<app-navbar></app-navbar>
+<div class="signupbox">
+    <div class="heading">
+        <div class="logo">Jio</div>
+        <div class="head">Video KYC</div>
+    </div>
+
+    <h1>Login</h1>
+
+    <div class="already">
+        <h4>Don't have an account?</h4>
+        <a class="link" routerLink="/signup">Sign Up!</a>
+    </div>
+    
+    <div class="form">
+        
+        <input type="text" placeholder="UserName">
+        <input type="text" placeholder="Email ID">
+        <input type="text" placeholder="Password">
+        <button class="primary-btn" routerLink="/home">Login</button>
+
+    </div>
+</div>
