--- a/videokyc-angular/src/app/page/signup/signup.component.html
+++ b/videokyc-angular/src/app/page/signup/signup.component.html
@@ -9,18 +9,15 @@
 
     <div class="already">
         <h4>Already have an account?</h4>
-        <a href="/login" class="link">Login!</a>
+        <a class="link" routerLink="/login">Login!</a>
     </div>
     
     <div class="form">
-        <div class="names">
-            <input type="text" placeholder="First Name">
-            <input type="text" placeholder="Last Name">
-        </div>
-
+        
+        <input type="text" placeholder="UserName">
         <input type="text" placeholder="Email ID">
         <input type="text" placeholder="Password">
-        <button class="primary-btn">Create Account</button>
+        <button class="primary-btn" routerLink="/login">Create Account</button>
 
     </div>
 </div>
