--- a/videokyc-angular/src/app/page/vkyc/vkyc.component.css
+++ b/videokyc-angular/src/app/page/vkyc/vkyc.component.css
@@ -25,8 +25,17 @@
 }
 .vertical{
     width: 2px;
-    height: 1000px;
+    height: 700px;
     color: white;
     background-color: white;
     margin-right: 10px;
+}
+div.titles h4{
+    z-index: 200;
+    position: fixed;
+}
+i{
+    z-index: 100;
+    margin-left: 400px;
+    cursor: pointer;
 }
