--- a/videokyc-angular/src/app/components/flowitem/flowitem.component.html
+++ b/videokyc-angular/src/app/components/flowitem/flowitem.component.html
@@ -10,6 +10,7 @@
             <li>Face Match</li>
             <li>KYC Report</li>
         </ol>
+        <button class="primary-btn" routerLink="/journey">Create Your Journey</button>
         <hr class="divider">
     </div>
 </div>
