IP address fetching

--- a/videokyc-angular/src/app/page/home/home.component.html
+++ b/videokyc-angular/src/app/page/home/home.component.html
@@ -1,6 +1,7 @@
 <app-homenavbar></app-homenavbar>
+
 <div class="herotext">
-    <p class="welcome">Welcome User</p>
+    <p class="welcome">Welcome User: {{ip}}</p>
     <h3>Jio DigiGov Team Presents</h3>
     <h1>Video KYC</h1>
     <p class="description">Video KYC is a mode through which users can complete the KYC for their accounts within just a few minutes. During the process, customer's KYC documents are verified and their signatures are recorded through a video call with a bank officer, thus doing away with the need of physically visiting a bank branch.</p>
