--- a/videokyc-angular/src/styles.css
+++ b/videokyc-angular/src/styles.css
@@ -7,6 +7,10 @@ body{
     height: 100%;
     background: linear-gradient(to right, #232649, #301b35);
     background-position: 0% 100%;
+    margin: 0;
+    width: 100vw;
+    height: 100vh;
+    overflow-x: hidden;
 }
 
 *{
