--- a/videokyc-angular/src/app/components/homenavbar/homenavbar.component.css
+++ b/videokyc-angular/src/app/components/homenavbar/homenavbar.component.css
@@ -2,9 +2,9 @@
     display: flex;
     justify-content:flex-start;
     align-items: center;
-    width: 100%;
+    width: 100vw;
     height: 100%;
-    gap: 350px;
+    gap: 120px;
 }
 
 .logo{
@@ -44,7 +44,7 @@ div.logo a{
 .nav-item::before {
     content: '';
     position: absolute;
-    width: 100%;
+    /* width: 100%; */
     height: 4px;
     border-radius: 4px;
     background-color: #e91e63;
@@ -67,7 +67,7 @@ div.logo a{
 
 nav{
     background: linear-gradient(to  right, #232649, #301b35);
-    width: 100%;
+    width: 100vw;
     height: 80px;
     margin: 0 auto;
 }
@@ -75,7 +75,7 @@ nav{
 .buttons{
     display: flex;
     gap: 30px;
-    margin-right: 160px;
+    margin-right: 120px;
 }
 
 
@@ -117,5 +117,5 @@ nav{
 
 .navdivider{
     border: 1px solid white;
-    width: 100%;
+    width: 100vw;
 }
