--- a/videokyc-angular/src/app/components/overlayform/overlayform.component.css
+++ b/videokyc-angular/src/app/components/overlayform/overlayform.component.css
@@ -89,7 +89,7 @@ label{
 
 .divider{
     border: 1px solid white;
-    width: 1300px;
+    width: 90vh;
     margin: auto;
     margin-bottom: 50px;
 }
