--- a/videokyc-angular/src/app/components/overlayform/overlayform.component.html
+++ b/videokyc-angular/src/app/components/overlayform/overlayform.component.html
@@ -1,31 +1,85 @@
-<form action="submit" id="form">
+<form action="submit" id="form" [formGroup]="postChoiceForm">
     <div class="bdbd">
         <label for="bd">Business Description: </label>
-        <input type="text" name="bd" placeholder="Enter data" />
+        <input type="text" name="bd" placeholder="Enter data" required formControlName="businessdesc" />
     </div>
 
-    <div class="boxbox">
-
-        <div class="stepy">
-            <h5 class="steps" *ngFor="let item of steps">{{item.stepno}}</h5>
-        </div>
-        <div class="formy">
-                <select name="login" id="s1">
-                    <option value="login" >Login</option>
+    <form class="dropdowns" [formGroup]="postChoiceForm">
+        <div class="left">
+            <div>
+                <label for="login">Step 1: </label>
+                <select name="login" id="login" required formControlName="step1">
+                    <option value="login">Login</option>
                 </select>
+            </div>
 
-                <select *ngFor="let item of steps" name={{item.id}} id={{item.id}} name={{item.id}}>
+            <div>
+                <label for="step2">Step 2: </label>
+                <select name="step2" id="s2" required formControlName="step2">
                     <option class="selectdefault" value="none" selected disabled hidden>Select</option>
-                    <option *ngFor="let item of steps" value={{item.step}} >{{ item.step }}</option>
+                    <option *ngFor="let item of steps" value={{item.step}}>{{item.step}}</option>
                 </select>
+            </div>
 
-                <select name="kyc" id="s8">
-                    <option value="kyc" >KYC Report</option>
+            <div>
+                <label for="step3">Step 3: </label>
+                <select name="step3" id="s3" required formControlName="step3">
+                    <option class="selectdefault" value="none" selected disabled hidden>Select</option>
+                    <option *ngFor="let item of steps" value={{item.step}}>{{item.step}}</option>
                 </select>
+            </div>
+
+            <div>
+                <label for="step4">step 4: </label>
+                <select name="step4" id="s4" required formControlName="step4">
+                    <option class="selectdefault" value="none" selected disabled hidden>Select</option>
+                    <option *ngFor="let item of steps" value={{item.step}}>{{item.step}}</option>
+                </select>
+            </div>
+
         </div>
-    </div>
 
-    <button class="primary-btn" routerLink="/vkyc">Submit</button>
+        <div class="right">
+            <div>
+                <label for="step5">Step 5: </label>
+                <select name="step5" id="s5" required formControlName="step5">
+                    <option class="selectdefault" value="none" selected disabled hidden>Select</option>
+                    <option *ngFor="let item of steps" value={{item.step}}>{{item.step}}</option>
+                </select>
+            </div>    
+
+            <div>
+                <label for="step6">Step 6: </label>
+                <select name="step6" id="s6" required formControlName="step6">
+                    <option class="selectdefault" value="none" selected disabled hidden>Select</option>
+                    <option *ngFor="let item of steps" value={{item.step}}>{{item.step}}</option>
+                </select>
+            </div>
+
+            <div>
+                <label for="step7">Step 7: </label>
+                <select name="step7" id="s7" required formControlName="step7">
+                    <option class="selectdefault" value="none" selected disabled hidden>Select</option>
+                    <option *ngFor="let item of steps" value={{item.step}}>{{item.step}}</option>
+                </select>
+            </div>
+
+            <div>
+                <label for="step8">step 8: </label>
+                <select name="step8" id="s8" required formControlName="step8">
+                    <option class="selectdefault" value="none" selected disabled hidden>Select</option>
+                    <option value="kyc">KYC Report</option>
+                </select>
+            </div>
+
+        </div>
+
+        
+    </form>
+                
+        
+
+    <button class="primary-btn" (click)="postChoiceData()">Submit</button>
 
     <hr class="divider">
 
