--- a/videokyc-angular/src/app/page/login/login.component.html
+++ b/videokyc-angular/src/app/page/login/login.component.html
@@ -13,12 +13,13 @@
         <a class="link" routerLink="/signup">Sign Up!</a>
     </div>
     
-    <form class="form" [formGroup]="postUserForm">
+    <form class="form" (ngSubmit)="postUserData" [formGroup]="postUserForm">
     
         <input type="text" name="username" placeholder="UserName" required formControlName="username">
         <input type="text" name="email" placeholder="Email ID" required formControlName="email">
         <input type="text" name="password" placeholder="Password" required formControlName="password">
-        <button class="primary-btn" (click)="postUserData()" >Login</button>
+        <button class="primary-btn" type="button" (click)="postUserData()" routerLink="/home">Login</button>
 
     </form>
 </div>
+
