--- a/videokyc-angular/src/app/page/home/home.component.html
+++ b/videokyc-angular/src/app/page/home/home.component.html
@@ -1,8 +1,8 @@
 <app-homenavbar></app-homenavbar>
 
 <div class="herotext">
-    <p class="welcome" *ngFor="let info of logininfo" >Welcome User: {{info.username}} {{info.email}} {{info.password}} </p>
-    <p class="welcome">Welcome User: {{ip}}</p>
+    <p class="welcome">Welcome User:  {{ loginDetails }} </p>
+    <p class="welcome">Welcome IP: {{ip}}</p>
     <h3>Jio DigiGov Team Presents</h3>
     <h1>Video KYC</h1>
     <p class="description">Video KYC is a mode through which users can complete the KYC for their accounts within just a few minutes. During the process, customer's KYC documents are verified and their signatures are recorded through a video call with a bank officer, thus doing away with the need of physically visiting a bank branch.</p>
