--- a/videokyc-angular/src/app/components/homenavbar/homenavbar.component.css
+++ b/videokyc-angular/src/app/components/homenavbar/homenavbar.component.css
@@ -1,6 +1,6 @@
 .flexbox{
     display: flex;
-    justify-content:flex-start;
+    justify-content:flex-evenly;
     align-items: center;
     width: 100vw;
     height: 100%;
