Business Description capitalized

--- a/videokyc-angular/src/app/page/vkyc/vkyc.component.html
+++ b/videokyc-angular/src/app/page/vkyc/vkyc.component.html
@@ -41,7 +41,7 @@
 
               <tbody>
                 <tr *ngFor="let record of latestRecord">
-                  <td>{{record.business_description}}</td>
+                  <td>{{record.Business_Description}}</td>
                   <td>{{record.step1}}</td>
                   <td>{{record.step2}}</td>
                   <td>{{record.step3}}</td>
