navbar space-evenly

--- a/videokyc-angular/src/app/components/overlayform/overlayform.component.html
+++ b/videokyc-angular/src/app/components/overlayform/overlayform.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="postChoiceForm">
     <div>
         <label for="bd">Business Description: </label>
-        <input type="text" name="bd" id="bd" placeholder="Enter data" required formControlName="business_description" />
+        <input type="text" name="bd" id="bd" placeholder="Enter data" required formControlName="Business_Description" />
     </div>
 
     <form class="dropdowns" [formGroup]="postChoiceForm">
