Form Validation and MatDialogBox

--- a/videokyc-angular/src/app/components/navbar/navbar.component.css
+++ b/videokyc-angular/src/app/components/navbar/navbar.component.css
@@ -55,7 +55,7 @@
 }
 
 nav{
-    background: linear-gradient(to  right, #232649, #301b35);
+    background: linear-gradient(to  right, #232649, #340d38);
     width: 100%;
     height: 80px;
     margin: 0 auto;
