--- a/videokyc-angular/src/app/page/login/login.component.html
+++ b/videokyc-angular/src/app/page/login/login.component.html
@@ -1,5 +1,9 @@
 <app-navbar></app-navbar>
 
+<!-- Error Message -->
+<!-- <app-alertmsg></app-alertmsg> -->
+
+<!-- Login Box -->
 <div class="signupbox">
     <div class="heading">
         <div class="logo">Jio</div>
@@ -15,11 +19,12 @@
     
     <form class="form" (ngSubmit)="postUserData" [formGroup]="postUserForm">
     
-        <input type="text" name="username" placeholder="UserName" required formControlName="username">
-        <input type="text" name="email" placeholder="Email ID" required formControlName="email">
-        <input type="text" name="password" placeholder="Password" required formControlName="password">
-        <button class="primary-btn" type="button" routerLink="/home" (click)="postUserData()" >Login</button>
+        <input type="text" name="username" placeholder="UserName" formControlName="username">
+        <input type="text" name="email" placeholder="Email ID" formControlName="email">
+        <input type="text" name="password" placeholder="Password" formControlName="password">
+        <button class="primary-btn" type="button" (click)="postUserData(); onsubmit()" >Login</button>
 
     </form>
 </div>
+
 
