--- a/videokyc-angular/src/app/components/homenavbar/homenavbar.component.css
+++ b/videokyc-angular/src/app/components/homenavbar/homenavbar.component.css
@@ -44,9 +44,9 @@ div.logo a{
 .nav-item::before {
     content: '';
     position: absolute;
-    /* width: 100%; */
-    height: 4px;
-    border-radius: 4px;
+    width: 100%;
+    height: 3px;
+    border-radius: 3px;
     background-color: #e91e63;
     bottom: 0;
     left: 0;
