--- a/videokyc-angular/src/styles.css
+++ b/videokyc-angular/src/styles.css
@@ -1,11 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import "~@fortawesome/fontawesome-free/css/all.css";
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
-
+/* #301b35 */
 body{
     font-family: Poppins;
     height: 100%;
-    background: linear-gradient(to right, #232649, #301b35);
+    background: linear-gradient(to right, #232649, #340d38);
     background-position: 0% 100%;
     margin: 0;
     width: 100vw;
