Validation for form

--- a/videokyc-angular/src/app/components/alertmsg/alertmsg.component.html
+++ b/videokyc-angular/src/app/components/alertmsg/alertmsg.component.html
@@ -1,6 +1,6 @@
 <mat-dialog-content>
     <header align="center"><h1>Warning!</h1></header>
-    <p align="center">Please fill all the data correctly. Password must be minimum 8 characters long</p>
+    <p align="center"> {{login_message}} </p>
 </mat-dialog-content>
 
 <mat-dialog-actions align="center">
