--- a/videokyc-angular/src/app/components/overlayform/overlayform.component.css
+++ b/videokyc-angular/src/app/components/overlayform/overlayform.component.css
@@ -117,3 +117,7 @@ label{
     justify-content:center;
     align-items: center;
 }
+
+input.ng-invalid.ng-touched{
+    border: 1px solid rgb(153, 5, 5);
+}
