Created stesform service and changed the namings for the previous service name

--- a/videokyc-angular/src/app/page/signup/signup.component.html
+++ b/videokyc-angular/src/app/page/signup/signup.component.html
@@ -1,4 +1,6 @@
 <app-navbar></app-navbar>
+
+<!-- Sign up Box -->
 <div class="signupbox">
     <div class="heading">
         <div class="logo">Jio</div>
