--- a/videokyc-angular/src/app/page/vkyc/vkyc.component.html
+++ b/videokyc-angular/src/app/page/vkyc/vkyc.component.html
@@ -3,6 +3,7 @@
   
   <div class="content">
     
+    <!-- Front Camera div -->
     <div class="video">
       <video #videoPlayer src="" autoplay></video>
     </div>
@@ -24,6 +25,8 @@
               <li>Step 7: {{latestRecord.step7}}</li>
             </ol> -->
 
+
+            <!-- Display Table -->
             <table>
 
               <thead>
