--- a/videokyc-angular/src/app/page/journey/journey.component.html
+++ b/videokyc-angular/src/app/page/journey/journey.component.html
@@ -1,4 +1,7 @@
 <app-homenavbar></app-homenavbar>
 
 <app-dropdowncard></app-dropdowncard>
+
 <app-overlayform></app-overlayform>
+
+<app-footer></app-footer>
