--- a/videokyc-angular/src/app/components/homenavbar/homenavbar.component.css
+++ b/videokyc-angular/src/app/components/homenavbar/homenavbar.component.css
@@ -8,7 +8,7 @@
 }
 
 .logo{
-    background-color: blue;
+    background:linear-gradient(to right,rgb(96, 96, 255), blue) ;
     border-radius: 50px;
     width: 40px;
     height: 40px;
@@ -83,7 +83,7 @@ nav{
     color: white;
     background-color: #01041D;
     border: 1px solid white;
-    border-radius: 15px;
+    border-radius: 10px;
     height: 40px;
     width: 100px;
     font-size: 16px;
@@ -107,7 +107,7 @@ nav{
     color: #01041D;
     background-color: white;
     border: 1px solid #01041D;
-    border-radius: 15px;
+    border-radius: 10px;
     height: 40px;
     width: 100px;
     font-size: 16px;
