--- a/videokyc-angular/src/app/components/navbar/navbar.component.css
+++ b/videokyc-angular/src/app/components/navbar/navbar.component.css
@@ -8,7 +8,7 @@
 }
 
 .logo{
-    background-color: blue;
+    background:linear-gradient(to right,rgb(96, 96, 255), blue) ;
     border-radius: 50px;
     width: 40px;
     height: 40px;
