--- a/videokyc-angular/src/styles.css
+++ b/videokyc-angular/src/styles.css
@@ -25,3 +25,25 @@ html{
 
 html, body { height: 100%; }
 
+.primary-btn{
+    height: 50px;
+    width: 300px;
+    font-weight: 500;
+    color:#3E3B61 ;
+    background-color:#00C2FF ;
+    border-radius: 15px;
+    font-weight: bold;
+    border: none;
+    font-size: 18px;
+    cursor: pointer;
+    margin-bottom: 50px;
+    border: 1px solid black;
+}
+
+.primary-btn:hover{
+    color: white;
+    background-color: black;
+    border: 1px solid white;
+    box-shadow: 4px 4px 0 0 white;
+    transition: 0.3s ease-in;
+}
