--- a/videokyc-angular/src/app/components/carousel/carousel.component.html
+++ b/videokyc-angular/src/app/components/carousel/carousel.component.html
@@ -1,3 +1,8 @@
+<div class="carousel-heading">
+  <h4 class="heading">Scope of VCIP</h4>
+  <p class="description">An instant way to open a bank account through Video Customer Identification Process (V-CIP)</p>
+</div>
+
 <div class="carousel-container">
     <div class="carousel-wrapper" [style.left]="-currentIndex * 25 + 'vw'">
       <div class="carousel-item" *ngFor="let item of carouselContent" >
