--- a/videokyc-angular/src/app/components/homenavbar/homenavbar.component.css
+++ b/videokyc-angular/src/app/components/homenavbar/homenavbar.component.css
@@ -78,10 +78,9 @@ nav{
     margin-right: 120px;
 }
 
-
 .loginbtn{
     color: white;
-    background-color: #01041D;
+    background-color: inherit;
     border: 1px solid white;
     border-radius: 10px;
     height: 40px;
@@ -105,7 +104,7 @@ nav{
 
 .signupbtn{
     color: #01041D;
-    background-color: white;
+    background-color: #00C2FF;
     border: 1px solid #01041D;
     border-radius: 10px;
     height: 40px;
