--- a/videokyc-angular/src/app/page/home/home.component.css
+++ b/videokyc-angular/src/app/page/home/home.component.css
@@ -1,42 +1,74 @@
+.ip{
+    display: flex;
+    background-color: whitesmoke;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    padding: 0 0 30px 0;
+}
+
+.herotext{
+    background-color: whitesmoke;
+    display: flex;
+    justify-content: center;
+    padding: 0 50px 50px 50px ;
+    gap: 15px;
+}
+
+.herotext-head{
+    display: flex;
+    flex-direction: column;
+    justify-content:flex-start;
+    text-align: left;
+    width: 50%;
+}
+
+.heroimg{
+    width: 100%;
+    height: 100%;
+    margin: auto;
+    object-fit: cover;
+    display: flex;
+    justify-content: center;
+}
+
+
+img{
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 15px;
+}
+
 .genericdivider{
-    border: 1px solid white;
+    border: 1px solid rgb(0, 0, 0);
     margin: auto;
     width: 80vw;
 }
 
 .welcome{
-    color: white;
     margin-top: 20px;
     font-size: 18px;
-}
-
-.herotext{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    /* margin: ; */
+    
 }
 
 h3{
-    font-size: 45px;
-    font-weight: 500;
-    color: white;
+    font-size: 30px;
+    font-weight: 600;
     margin-top: 20px;
+    text-align: left;
 }
 
 h1{
     font-size: 55px;
     font-weight: 600;
-    color: white;
     margin: 10px 0 10px 0;
+    text-align: left;
 }
 
 p.description{
     font-size: 18px;
     font-weight: 400;
     margin-bottom: 40px;
-    width: 700px;
-    color:white;
-    text-align: center;
+    width: 500px;
+    text-align: left;
 }
