--- a/videokyc-angular/src/app/page/vkyc/vkyc.component.css
+++ b/videokyc-angular/src/app/page/vkyc/vkyc.component.css
@@ -1,3 +1,8 @@
+.vkyctopheading{
+    color: white;
+    margin: 50px 0 0px 80px;
+}
+
 .mainbox{
     display: flex;
     margin: 0px 10px 0px 80px;
@@ -7,10 +12,11 @@
 }
 
 table, th, td{
-    border: 1px solid white;
+    border: 0.5px solid white;
     border-collapse: collapse;
     padding: 3px 8px 3px 8px;
-    width: 730px;
+    width: 75vw;
+    margin-bottom: 50px;
 }
 
 .content{
