--- a/videokyc-angular/src/app/page/vkyc/vkyc.component.html
+++ b/videokyc-angular/src/app/page/vkyc/vkyc.component.html
@@ -1,12 +1,17 @@
 <app-homenavbar></app-homenavbar>
+
+<div class="vkyctop">
+  <h1 class="vkyctopheading">Thank You for Choosing VCIP</h1>
+</div>
+
 <div class="mainbox">
   
   <div class="content">
     
     <!-- Front Camera div -->
-    <div class="video">
+    <!-- <div class="video">
       <video #videoPlayer src="" autoplay></video>
-    </div>
+    </div> -->
 
       <div class="heads">
         <div class="headingyourdata">
@@ -60,9 +65,9 @@
       </div>
   </div>
    
-  <hr class="vertical">
+  <!-- <hr class="vertical"> -->
   
-  <div class="yourdata">
+  <!-- <div class="yourdata">
     <div class="headingyourdata">
       <h4 class="yourdatahead">Your Data:</h4>
     </div>
@@ -76,7 +81,7 @@
 
   </div>
 
-</div>
+</div> -->
 </div>
 <hr>
 <app-footer></app-footer>
