--- a/videokyc-angular/src/app/components/flowitem/flowitem.component.css
+++ b/videokyc-angular/src/app/components/flowitem/flowitem.component.css
@@ -68,3 +68,52 @@ ol li{
     box-shadow: 4px 4px 0 0 white;
     transition: 0.3s ease-in;
 } */
+
+.flowcards{
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    margin-top: 50px;
+}
+
+.cards{
+    display: flex;
+    flex-direction: row;
+    margin: auto;
+    margin-bottom: 50px;
+    margin-top: 50px;
+    gap: 10px;
+}
+
+.onecard{
+    border-radius: 10px;
+    border: 1px solid white;
+    color: white;
+    width: 10vw;
+    height: 30vh;
+    background-color: inherit;
+    padding: 20px 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content:flex-start;
+    gap: 30px;
+    text-align: center;
+}
+
+h3{
+    color: white;
+    font-size: 20px;
+}
+
+button{
+    margin: auto;
+    margin-bottom: 50px;
+}
+
+mat-icon{
+    font-size: 40px;
+    width: auto;
+    height: auto;
+    color:white;
+}
