--- a/videokyc-angular/src/app/components/homenavbar/homenavbar.component.html
+++ b/videokyc-angular/src/app/components/homenavbar/homenavbar.component.html
@@ -6,6 +6,7 @@
         <ul class="nav-list">
             <li class="nav-item" routerLink="/home">Home</li>
             <li class="nav-item" routerLink="/vkyc">Partner Management</li>
+            <li class="nav-item" routerLink="/solutions">Solutions</li>
         </ul>
         <div class="buttons">
             <button class= "loginbtn" routerLink="/login">Login</button>
